WebCore: Timers from cached pages fire instantly rather than the after the specified timeout delay https://bugs.webkit.org/show_bug.cgi?id=28683

Reviewed by Brady Eidson.

Test: fast/dom/Window/timer-resume-on-navigation-back.html

* history/CachedPage.cpp:
(WebCore::CachedPage::restore): Remove duplicated Frame::restore() call, since
    it should be done only once in FrameLoader::open(cachedFrame)
* page/DOMTimer.cpp: Added a debug-only flag and ASSERT to catch out-of-order suspense/restore.
(WebCore::DOMTimer::DOMTimer): Ditto.
(WebCore::DOMTimer::suspend): Ditto.
(WebCore::DOMTimer::resume): Ditto.
* page/DOMTimer.h: Ditto.

LayoutTests: Timers from cached pages fire instantly rather than the specified timeout delay
https://bugs.webkit.org/show_bug.cgi?id=28683

Reviewed by Brady Eidson.

Added test to verify the fix - it uses page cache and measures the timer callback fire time.

* fast/dom/Window/timer-resume-on-navigation-back-expected.txt: Added.
* fast/dom/Window/timer-resume-on-navigation-back.html: Added.

Canonical link: https://commits.webkit.org/39348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47772 268f45cc-cd09-0410-ab3c-d52691b4dbfc